--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.32</version>
 		</dependency>
+		<!-- Database Table, Column as Object. Query as Object -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+	
 	</dependencies>
 </project>
